<resources>
    <string name="app_name">ShowTime</string>

    <!-- Misc -->
    <string name="ok">OK</string>
    <string name="na">N/A</string>
    <string name="hint">Ask me anything!</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <!-- Landing Page -->
    <string name="booth_img_desc">Ticket booth with ShowTime logo</string>
    <string name="how_can_i_help_you">How can I help you?</string>
    <string name="prompt_1">What can you do?</string>
    <string name="prompt_2">Details and timetable of shows</string>
    <string name="prompt_3">I need help with my reservation</string>
    <string name="prompt_4">Seating options and prices</string>

    <!-- Header -->
    <string name="logo_desc">ShowTime logo</string>
    <string name="help_desc">Help Page</string>

    <!-- Chat Page -->
    <string name="sent_desc">Send message</string>
    <string name="clear_chat_title"> 🗑️ Clear Chat?</string>
    <string name="clear_chat_desc">Wipes the chat clean, but don’t worry — your reservations and other actions are safe.</string>
    <string name="confirm_rating_title">Confirm rating?</string>
    <string name="rating_title">You rated</string>
    <string name="bubble_desc">typing bubble…</string>

    <!-- Banners -->
    <string name="res_code">Reservation Code</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="show">Show Name</string>
    <string name="res_name">Reservation Name</string>
    <string name="amount_title">Outstanding amount:</string>
    <string name="amount">amount</string>
    <string name="connect_me_to_support">Connect me to a support expert</string>

    <!-- Help Page -->
    <string name="call_center_title">Call Center</string>
    <string name="call_center_number">210-0000000</string>
    <string name="more_help">If you need further help with an active conversation, please ask UsherBot for a support expert.</string>
    <string name="faq">FAQ</string>
    <string name="faq_1">1. Booking &amp; Confirmation</string>
    <string name="faq_2">2. Pricing &amp; Payment</string>
    <string name="faq_3">3. Managing My Reservation</string>
    <string name="faq_4">4. Show Information</string>
    <string name="faq_5">5. Troubleshooting &amp; Support</string>
    <string name="copyright">© 2025 ShowTime. Icons by <a href="https://icons8.com/">Icons8</a></string>

    <!-- FAQ Page -->
    <string name="faq_question">Question?</string>
    <string name="faq_answer">Answer.</string>
</resources>
