<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:background="@color/peach_yellow"
    tools:context=".LandingPage.LandingPageActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="295dp"
        android:layout_height="350dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/booth_img_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/landing_page_img" />

    <TextView
        android:id="@+id/txt_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/how_can_i_help_you"
        android:textColor="@color/lapis_lazuli"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/landing_edit_txt"
        android:layout_width="310dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_white"
        android:ems="10"
        android:fontFamily="@font/inter_medium"
        android:hint="@string/hint"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_intro"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_prompt_1"
        android:layout_width="290dp"
        android:layout_height="42dp"
        android:layout_marginTop="45dp"
        android:backgroundTint="@color/white"
        android:elevation="50dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/prompt_1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landing_edit_txt" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_prompt_2"
        android:layout_width="290dp"
        android:layout_height="42dp"
        android:layout_marginTop="17dp"
        android:backgroundTint="@color/white"
        android:elevation="50dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/prompt_2"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_prompt_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_prompt_3"
        android:layout_width="290dp"
        android:layout_height="42dp"
        android:layout_marginTop="17dp"
        android:backgroundTint="@color/white"
        android:elevation="50dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/prompt_3"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_prompt_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_prompt_4"
        android:layout_width="290dp"
        android:layout_height="42dp"
        android:layout_marginTop="17dp"
        android:backgroundTint="@color/white"
        android:elevation="50dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/prompt_4"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_prompt_3" />
</androidx.constraintlayout.widget.ConstraintLayout>
