<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ticket_banner_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="64dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/box_rounded_coral"
    android:padding="12dp">

    <ImageView
        android:id="@+id/ticket_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_ticket" />

    <TextView
        android:id="@+id/ticket_res_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:ellipsize="end"
        android:fontFamily="@font/inter_extrabold"
        android:maxLines="1"
        android:text="@string/res_code"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/coral"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/ticket_date"
        app:layout_constraintStart_toEndOf="@+id/ticket_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ticket_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:fontFamily="@font/inter_semibold"
        android:maxLines="2"
        android:text="@string/date"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/coral"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ticket_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:fontFamily="@font/inter_semibold"
        android:maxLines="2"
        android:text="@string/time"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/coral"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ticket_date" />

    <TextView
        android:id="@+id/ticket_show"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:fontFamily="@font/inter_extrabold"
        android:maxLines="2"
        android:text="@string/show"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/coral"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ticket_icon" />

    <TextView
        android:id="@+id/ticket_customer_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:ellipsize="end"
        android:fontFamily="@font/inter_medium"
        android:maxLines="2"
        android:text="@string/res_name"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ticket_show" />

    <TextView
        android:id="@+id/ticket_amount_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:ellipsize="end"
        android:fontFamily="@font/inter_regular"
        android:maxLines="2"
        android:text="@string/amount_title"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ticket_customer_name" />

    <TextView
        android:id="@+id/ticket_total_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:ellipsize="end"
        android:fontFamily="@font/inter_extrabold"
        android:maxLines="2"
        android:text="@string/amount"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ticket_amount_title"
        app:layout_constraintTop_toBottomOf="@id/ticket_customer_name" />

</androidx.constraintlayout.widget.ConstraintLayout>
