<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box_rounded_coral">

        <TextView
            android:id="@+id/clear_chat_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_extrabold"
            android:text="@string/clear_chat_title"
            android:textAlignment="center"
            android:textColor="@color/coral"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/clear_chat_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/clear_chat_desc"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clear_chat_title" />

        <Button
            android:id="@+id/btn_confirm_clear_chat"
            android:layout_width="144dp"
            android:layout_height="56dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clear_chat_desc"
            app:strokeColor="@color/coral"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/btn_cancel_clear_chat"
            android:layout_width="144dp"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.867"
            app:layout_constraintStart_toEndOf="@+id/btn_confirm_clear_chat"
            app:layout_constraintTop_toBottomOf="@+id/clear_chat_desc"
            app:strokeColor="@color/coral"
            app:strokeWidth="1dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
